Fixed Horizontal Scrollbar

--- a/cego-app/src/app/main/menu/menu.component.scss
+++ b/cego-app/src/app/main/menu/menu.component.scss
@@ -1,4 +1,7 @@
-@import '../../../styles.scss';
 .nav-bar-width {
     width: 200px;
+}
+
+.sidenav-content {
+    overflow-x: hidden;
 }
